# example-standalone-inferencing-zephyr

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  Dockerfile  README.md  old_cmake.txt  prj.conf  sample.yaml  temp  west.yml
.github/workflows/: test-build.yml
app/: .gitignore  README.md
app/src/: main.cpp
boards/: thingy53.c  thingy53_nrf5340_cpuapp.conf  thingy53_nrf5340_cpuapp.overlay
docs/: On_your_zephyr_board.md
edge-impulse-sdk/dsp/: memory.hpp
edge-impulse-sdk/porting/zephyr/: CMakeLists.txt  Kconfig  ei_classifier_porting.cpp
porting/: ei_classifier_porting.h
porting/zephyr/: CMakeLists.txt  Kconfig  debug_log.cpp  ei_classifier_porting.cpp
src/: main.c  main.cpp
src/edge-impulse-sdk/classifier/: ei_aligned_malloc.h
src/model-parameters/: dsp_blocks.h  model_metadata.h
tflite-model/: trained_model_compiled.cpp  trained_model_compiled.h
utils/cmake/: utils.cmake
